<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/frame_white"
    android:backgroundTint="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewAssembly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/assembling"
        android:textColor="@color/text_color_Dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/close"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textViewAssembly"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="11.08.2023·(21:00 - 9:00)"
        android:textColor="@color/text_color_Dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAssembly"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textViewStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/warehouse"
        android:textColor="@color/bia_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDateTime"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewStoreValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:text="Москва-Север-1"
        android:textColor="@color/text_color_Dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDateTime"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewShift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/shift"
        android:textColor="@color/bia_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStore"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewShiftValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:text="Ночная смена"
        android:textColor="@color/text_color_Dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStore"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textShiftSpesiality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/specialization"
        android:textColor="@color/bia_gray_color"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewShift"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewSpecialityValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:text="Сборщик"
        android:textColor="@color/text_color_Dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewShift"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/frame_black_fill"
        android:text="@string/to_accept"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecialityValue"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonDecline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/frame_blue_gray"
        android:backgroundTint="@color/color_light_gray_blue"
        android:clickable="false"
        android:text="@string/reject"
        android:textAllCaps="false"
        android:textColor="@color/text_color_Dark"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAccept"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewWorkAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/frame_blue_gray"
        android:backgroundTint="@color/color_light_gray_blue"
        android:lineSpacingExtra="5dp"
        android:padding="10dp"
        android:text="@string/work_accept"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecialityValue"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/frame_blue_gray"
        android:backgroundTint="@color/color_light_gray_blue"
        android:lineSpacingExtra="5dp"
        android:maxLines="4"
        android:minLines="3"
        android:padding="10dp"
        android:singleLine="false"
        android:text="@string/work_answer"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecialityValue"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewWorkDecline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/frame_blue_gray"
        android:backgroundTint="@color/color_light_gray_blue"
        android:lineSpacingExtra="5dp"
        android:maxLines="4"
        android:minLines="2"
        android:padding="10dp"
        android:singleLine="false"
        android:text="@string/work_decline"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecialityValue"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>